--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   background-color:#DCDCDC ;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,6 +11,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+*{
+  margin: 0px;
+  padding: 0px;
 }
 
 table, th, td {
